# BetaRobot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  IFLOW.md  LICENSE  Makefile  STM32F407VET6.jdebug  betawave_user.py  build_log.txt  def.h  main.c  openocd_dap.cfg  openocd_rtt.cfg  ozone.jdebug  readme.md  todo.md  user_cfg.h  user_cfg.h.example  待办.md
.claude/: settings.local.json
.doc/: APP开发指南.md  BSP开发指南.md  Cortex-M7内存使用注意事项.md  DM_MC02.xlsx  DRV开发指南.md  FreeRTOS静态内存API指南.md  VSCode配置文件详解.md  bmi088 寄存器配置指南.md  bmi088中文数据手册(deepseek翻译).md  drv_bmi088使用指南.md  duty_speed.xlsx  pdf2md.py  todo.md  代码规范.md  内存与存储原理.md  项目架构设计方案.md
.doc/asset/: launch.json  tasks.json
.doc/其他/: CubeMX_FreeRTOS配置指南.md  HAL_TIM_API参考.md  Makefile语法教程.md  dwt使用.md  readelf输出文件说明.md
.doc/官方手册/: 开发板、主控参数.xlsx  引脚映射表.xlsx
.doc/官方手册/BMI088/: BMI088.md
.doc/官方手册/C610/: RM C610无刷电机调速器使用说明 发布版.md  RM M2006 P36直流无刷减速电机使用说明.md
.doc/官方手册/C620/: RoboMaster C620无刷电机调速器使用说明（中英日）V1.01.md  RoboMaster M3508直流无刷减速电机使用说明V1.0（中英日）.md  RoboMaster M3508直流无刷减速电机混控教程V1.0.md  RoboMaster M3508附件包使用说明V1.0（中英日）.md  RoboMaster_M3508_直流无刷电机_使用说明（中英）.md  RoboMaster__C620_无刷电机调速器使用说明.md  版本差异.md
.doc/官方手册/DJI_A/: RoboMaster 开发板A型 位号图.md  RoboMaster 开发板A型 原理图.md  RoboMaster 开发板B型 位号图.md  RoboMaster 开发板B型 原理图.md  RoboMaster_开发板A型使用说明.md  RoboMaster开发版用户手册.md  STM32F427xx.md
.doc/官方手册/DJI_C/: RoBoMaster 开发板 C 型原理图.md  RoboMaster  开发板 C 型使用说明.md  RoboMaster  开发板 C 型用户手册.md  RoboMaster 开发板 C 型位号图.md  RoboMaster 开发板 C 型陀螺仪FPC小板位号图.md  RoboMaster 开发板 C 型陀螺仪FPC小板原理图.md  STM32F407xx.md
.doc/官方手册/DM_MC02/: CtrBoard-H7_V1.0-240124.md  CtrBoard-H7_V1.0-管脚标注图240127.md  STM32H723xx.md  STM32H7xx参考手册V3 - DBGMCU.pdf.md  STM32H7xx参考手册V3 - 复位和时钟控制.pdf.md  STM32H7xx参考手册V3 - 电源控制.pdf.md  STM32H7xx参考手册V3 - 通用定时器.pdf.md  STM32H7xx参考手册V3 - 高级定时器.pdf.md  达妙科技DM-MC-Board02电机开发板使用说明书V1.1.md
.doc/官方手册/GM6020/: RoboMaster_GM6020直流无刷电机使用说明20231013.md
.doc/官方手册/IST8310/: IST8310.md
.doc/官方手册/MPU6500/: MPU6500.md
.doc/官方手册/dm4310/: DM-J4310-2EC V1.2减速电机说明书V1.2定稿.md
.doc/工具链/: SEGGER_RTT使用指南.md  cmake工具链.md  工具链配置.md
.doc/测量数据/: 21khz.xlsx  GA25-370.md  duty_speed.xlsx
.doc/项目文档/: BSP开发指南.md  DRV开发指南.md  check_list.md  git使用规范.md  代码要求.md  配置文件.md  项目架构设计方案.md
.github/workflows/: deploy-docs.yml
app/: app_cfg.h
app/Assess/: Makefile
app/app_chassis/: app_chassis.c
app/app_cmd/: app_cmd.c
app/app_motor/: app_motor.c
app/app_robot/: app_robot.c  app_robot.h
app/app_sensor/: app_sensor.c  app_sensor.h
app/dcmotor_chassis/: .gitignore  Makefile  app_cfg.h
app/inc/: app_cfg.h  app_chassis.h  app_cmd.h  app_error.h  app_motor.h  app_robot.h
app/src/: app_chassis.c  app_cmd.c  app_error.c  app_motor.c  app_robot.c
bsp/: CMakeLists.txt  bsp.h
bsp/bsp_adc/: bsp_adc.c  bsp_adc.h
bsp/bsp_can/: bsp_can.c  bsp_can.h
bsp/bsp_cfg/: bsp_cfg.c  bsp_cfg.h  bsp_check.h
bsp/bsp_crc/: bsp_crc.c  bsp_crc.h
bsp/bsp_dwt/: bsp_dwt.c  bsp_dwt.h
bsp/bsp_freertos/: bsp_freertos.c  bsp_freertos.h
bsp/bsp_gpio/: bsp_gpio.c  bsp_gpio.h
bsp/bsp_log/: bsp_log.h
bsp/bsp_math/: bsp_math.c  bsp_math.h  bsp_math.md  bsp_math_angle.h  bsp_math_const.h  bsp_math_matrix.h  bsp_math_quat.h  bsp_math_transform.h  bsp_math_trig.h  bsp_math_types.h  bsp_math_vector.h
bsp/bsp_spi/: bsp_spi.c  bsp_spi.h
bsp/bsp_tim/: bsp_tim.c  bsp_tim.h
bsp/bsp_uart_log/: bsp_uart_log.c  bsp_uart_log.h
bsp/bsp_usart/: bsp_usart.c  bsp_usart.h
bsp/inc/: bsp_adc.h  bsp_cfg.h  bsp_gpio.h  bsp_log.h  bsp_math.h  bsp_module.h  bsp_spi.h  bsp_tim.h  bsp_usart.h
bsp/src/: bsp_adc.c  bsp_cfg.c  bsp_dwt.c  bsp_gpio.c  bsp_log.c  bsp_math.c  bsp_module.c  bsp_spi.c  bsp_tim.c  bsp_usart.c
cmake/: extract-cubemx-vars.cmake  toolchain-gcc-arm-none-eabi.cmake
cubemx/DJI_A/: .mxproject  CMakeLists.txt  DJI_A.ioc
cubemx/DJI_C/: .mxproject  CMakeLists.txt  DJI_C.ioc
cubemx/DM_MC02/: .mxproject  CMakeLists.txt  DM_MC02.ioc
cubemx/STM32F407VET6/: .mxproject  STM32F407VET6.ioc
cubemx/board_config/: 硬件分配.md
docs/: index.md  package-lock.json  package.json  start-docs.bat  start-docs.sh
docs/.vitepress/: config.mts
docs/guide/: APP开发指南.md  BSP开发指南.md  DRV开发指南.md  check_list.md  git使用规范.md  intro.md  代码要求.md  代码规范.md  配置文件.md  项目架构设计方案.md
docs/guide/other/: dwt使用.md  (+8 more)
docs/manuals/: bmi088.md  c610.md  c620.md  dji_a.md  dji_c.md  dm4310.md  dm_mc02.md  gm6020.md  index.md  ist8310.md  mpu6500.md
docs/official_docs/: index.md
docs/project_docs/: Pages开发文档.md  git使用规范.md  代码要求.md  代码规范.md  设计思路和原因.md  项目架构.md
docs/user_docs/: 使用文档.md  配置文件.md
drv/: CMakeLists.txt
drv/drv_acmotor/: drv_acmotor_base.c  drv_acmotor_base.h  drv_motor_base.c  drv_motor_base.h
drv/drv_axis/: drv_axis_mit_lite.c  drv_axis_mit_lite.h
drv/drv_axis_lite/: drv_axis_lite_def.h  drv_axis_mit_lite.c  drv_axis_mit_lite.h  多正弦叠加辨识说明.md
drv/drv_bmi088/: bmi088_reg_def.h  drv_bmi088.c  drv_bmi088.h  drv_bmi088_heater.c
drv/drv_chassis/: drv_chassis.c  drv_chassis.h  drv_chassis_def.h  drv_chassis_position_lite.c  drv_chassis_position_lite.h  reademe.md
drv/drv_chassis_lite/: drv_chassis_lite.h
drv/drv_daemon/: drv_daemon.c  drv_daemon.h
drv/drv_mahony/: drv_mahony.c  drv_mahony.h
drv/drv_mit/: drv_mit.c  drv_mit.h
drv/drv_motor/: drv_motor_base.c  drv_motor_base.h  drv_motor_def.h
drv/drv_pid/: drv_pid.c  drv_pid.h
drv/drv_sbus/: drv_sbus.c  drv_sbus.h
drv/drv_vofa/: drv_vofa.c  drv_vofa.h  drv_vofa_lite.c  drv_vofa_lite.h  vofa_analyzer.py  vofa_user.py.example
drv/inc/: drv_bmi088.h  drv_chassis.h  drv_dcmotor.h  drv_motor_base.h  drv_pid.h  drv_sbus.h
drv/src/: drv_bmi088.c  drv_chassis.c  drv_dcmotor.c  drv_pid.c  drv_sbus.c
hal/DJI_A/: .mxproject  DJI_A.ioc  Makefile  bsp_map.h  openocd_rtt.cfg
hal/DJI_C/: .mxproject  DJI_C.ioc  Makefile  bsp_map.h  jlink_download.jlink  openocd_rtt.cfg
hal/DM_MC02/: .mxproject  DM_MC02.ioc  Makefile  STM32H723XG_FLASH.ld  bsp_map.h  startup_stm32h723xx.s
hal/STM32F407VET6/: .mxproject  CMakeLists.txt  Makefile  STM32F407VET6.ioc  bsp_map.c  openocd_daplink.cfg  openocd_rtt.cfg
(+153 files in other folders)
